# fundraiser-app

./: .gitignore  db_setuo
backend/: .gitignore  Cargo.toml  requirements.txt
backend/config/: asgi.py  settings.py  urls.py
backend/fundraiser/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/fundraiser/services/: mpesa.py
backend/fundraiser/websocket/: consumers.py  routing.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/contribute/: page.tsx
frontend/components/: ContributionForm.tsx  StatsDisplay.tsx  ThankYouSection.tsx  YearlyStats.tsx
frontend/hooks/: useWebsocket.tsx
