[package]
name = "fundraiser-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
actix-cors = "0.7"
actix-ws = "0.3"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
env_logger = "0.11"
log = "0.4"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"

[dev-dependencies]
actix-test = "0.1"